Now you must set the Character of  state before you can add the state to a matrix.